[metadata]
name = yahoo_oauth_fantasy
version = 0.1.0
description = Python Yahoo OAuth Library. Supports OAuth1 and OAuth2. Gets data from function variables or file
license = MIT
author = Runner15
long_description = file: README.md
url = https://github.com/runner15/yahoo_oauth_fantasy
keywords = yahoo, oauth, oauth1, oauth2

[options]
packages = find:
install_requires =
    pyaml
    rauth
